[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "backend"
description = "The API for statusmc.perchun.it (api.statusmc.perchun.it)."
version = "0.1.0"
license = "MIT"
authors = ["Perchun Pak <statusmc@perchun.it>"]
readme = "README.md"
repository = "https://github.com/StatusMC/backend"


[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"

# Our dependecies
mcstatus = { git = "https://github.com/PerchunPak/mcstatus.git", branch = "add-more-methods-connected-to-motd" }
fastapi = "~0.95"
uvicorn = "~0.22"

omegaconf = "~2.3"
deta = "~1.1"

loguru = "~0.7"
sentry-sdk = "~1.21"


[tool.poetry.group.make.dependencies]
black = "~23"
isort = "~5.12"
pycln = "~2.1"
doc8 = "~1.1"
flake8 = "~6"
flake8-docstrings = "~1"
flake8-ensure-ascii = "~1.0"
pydocstyle = ">=4.0.0"
safety = "~2.3"
cruft = "~2.14"
lice = "~0.6"  # for generating template

pre-commit = "~3.2"


[tool.poetry.group.typing.dependencies]
mypy = "~1.2"


[tool.poetry.group.tests.dependencies]
pytest = "~7.3"
pytest-cov = "~4.0"
pytest-mock = "~3.10"
pytest-testmon = "~2.0"
pytest-randomly = "~3.12"
Faker = "~18.4"


[tool.poetry.group.github_hooks]
optional = true

[tool.poetry.group.github_hooks.dependencies]
requests = "~2.28"
GitPython = "~3.1"



[tool.poetry.group.types.dependencies]
types-pyyaml = "^6.0.12.9"

[tool.black]
line-length = 120
target-version = ['py38']
