[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "backend"
description = "The API for statusmc.perchun.it (statusmc.perchun.it/api)."
version = "0.1.0"
license = "MIT"
authors = ["Perchun Pak <statusmc@perchun.it>"]
readme = "README.md"
repository = "https://github.com/StatusMC/backend"


[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"

# Our dependecies
mcstatus = "11.0.0rc2"
fastapi = "~0.104"
pydantic = "~1"
uvicorn = { extras = ["standart"], version = "~0.23" }

omegaconf = "~2.3"

# caching utils
cachetools = "~5.3"
asyncache = "~0.3"

loguru = "~0.7"
sentry-sdk = "~1.32"


[tool.poetry.group.make.dependencies]
black = "~23"
isort = "~5.12"
pycln = "~2.2"
flake8 = "~6"
flake8-docstrings = "~1"
flake8-ensure-ascii = "~1.0"
pydocstyle = ">=4.0.0"
safety = "~2.3"
cruft = "~2.14"
lice = "~0.6"  # for generating template

pre-commit = "~3.3"


[tool.poetry.group.typing.dependencies]
mypy = "~1.5"


[tool.poetry.group.tests.dependencies]
pytest = "~7.4"
pytest-cov = "~4.1"
pytest-mock = "~3.11"
pytest-testmon = "~2.0"
pytest-randomly = "~3.15"
Faker = "~19.3"


[tool.poetry.group.github_hooks]
optional = true

[tool.poetry.group.github_hooks.dependencies]
requests = "~2.31"
GitPython = "~3.1"


[tool.poetry.group.types.dependencies]
types-pyyaml = "^6.0.12.9"
types-cachetools = "^5.3.0.5"


[tool.poetry.group.docker]
optional = true

[tool.poetry.group.docker.dependencies]
dumb-init = "~1.2"


[tool.black]
line-length = 120
target-version = ['py38']
