[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "backend"
description = "The API for statusmc.perchun.it (statusmc.perchun.it/api)."
version = "0.1.0"
license = "MIT"
authors = ["Perchun Pak <statusmc@perchun.it>"]
readme = "README.md"
repository = "https://github.com/StatusMC/backend"


[tool.poetry.dependencies]
python = ">=3.8.1,<3.13"

mcstatus = { git = "https://github.com/py-mine/mcstatus", rev = "58afaecc07ac0f11685aac0f5c9fea826e18e863" }
fastapi = "~0.110"
pydantic = "~1"
uvicorn = { extras = ["standart"], version = "~0.27" }

omegaconf = "~2.3"

# caching utils
cachetools = "~5.3"
asyncache = "~0.3"

loguru = "~0.7"
sentry-sdk = "~1.41"


[tool.poetry.group.make.dependencies]
black = "~23"
isort = "~5.12"
pycln = "~2.4"
cruft = "~2.14"
lice = "~0.6"  # for generating template

pre-commit = "~3.5"


[tool.poetry.group.typing.dependencies]
mypy = "~1.7"


[tool.poetry.group.tests.dependencies]
pytest = "~7.4"
pytest-cov = "~4.1"
pytest-mock = "~3.12"
pytest-randomly = "~3.15"
Faker = "~20.1"


[tool.poetry.group.github_hooks]
optional = true

[tool.poetry.group.github_hooks.dependencies]
requests = "~2.31"
GitPython = "~3.1"


[tool.poetry.group.types.dependencies]
types-pyyaml = "^6.0.12.9"
types-cachetools = "^5.3.0.5"


[tool.poetry.group.docker]
optional = true

[tool.poetry.group.docker.dependencies]
dumb-init = "~1.2"


[tool.black]
line-length = 120
target-version = ['py38']
